--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,8 +16,7 @@ jobs:
           sudo apt update
           sudo apt install devscripts equivs -yq
           yes | sudo mk-build-deps -i
-          pwd
-          #sudo dpkg-buildpackage -b
+          sudo dpkg-buildpackage -b
 
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -26,5 +25,6 @@ jobs:
           prerelease: false
           title: "Auto Build"
           files: |
-            ../*.deb
+            /home/runner/work/debian-kernel/*.deb
+            /home/runner/work/debian-kernel/debian-kernel/*.deb
 
