--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [ main ]
+    branches: [ libre ]
   pull_request:
-    branches: [ main ]
+    branches: [ libre ]
   workflow_dispatch:
 
 jobs:
